[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Morcego.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 61.4362, 60.6278 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 655.591

[node name="Bat" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
playing = true

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="body_entered" from="Range" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
